# beerbets

./: README.md  events.csv  pyproject.toml
beerbets/: bet_page.py  homepage.py  main.py
